fix flexbasis in weld.html from 24% to 40% to make it more visible for smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ h3 {
     padding: 10px;
     background-color: transparent;
     text-align: center;
-    flex-basis: 24%;
+    flex-basis: 40%;
     flex-grow: 1;
     padding-bottom: 2em;
 }
